hphp/test/zend/bad/zend/access_modifiers_006.php
<?php

class test {
	static static function foo() {
	}
}

echo "Done\n";
?>